# job-is

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
migrations/: env.py
migrations/versions/: 092f77670979_create_tables.py  20ecd349260f_.py  525cab12b24c_add_job_postings_locations_working_.py  d210e7b6c7ec_.py  dec82168e2e2_.py
src/: __init__.py  envs.py  main.py
src/core/: enums.py  posts.py
src/database/: config.py
src/job/: enums.py  models.py  routers.py  schemas.py  services.py
src/post/: enums.py  models.py
src/resume/: enums.py  models.py  routers.py  schemas.py  services.py
tests/: conftest.py  factories.py  session.py
tests/job/: test_job.py
tests/resume/: test_resume.py
